tests/valid/lifetime/hrt_multiple_lifetimes.facet
fn accept(f: unrestricted for<'a, 'b> fn(unrestricted &'a unrestricted isize, unrestricted &'b unrestricted isize) -> unrestricted &'a unrestricted isize) -> unrestricted () {
    ()
}
